<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TabHost android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TabWidget android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@android:id/tabs" />

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@android:id/tabcontent" >

                <LinearLayout android:id="@+id/tab1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView android:id="@+id/textView1"
                        android:text="@string/csf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText android:id="@+id/etxCantCSF"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cantidad"/>

                    <Button android:id="@+id/btnGuardar1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guardar"/>
                </LinearLayout>

                <LinearLayout android:id="@+id/tab2"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView android:id="@+id/textView2"
                        android:text="@string/ccf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText android:id="@+id/etxCantCCF"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cantidad"/>

                    <Button android:id="@+id/btnGuardar2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guardar"/>
                </LinearLayout>

                <LinearLayout android:id="@+id/tab3"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView android:id="@+id/textView3"
                        android:text="@string/vsf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText android:id="@+id/etxCantVSF"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cantidad"/>

                    <Button android:id="@+id/btnGuardar3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guardar"/>
                </LinearLayout>

                <LinearLayout android:id="@+id/tab4"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView android:id="@+id/textView4"
                        android:text="@string/vcf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText android:id="@+id/etxCantVCF"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cantidad"/>

                    <Button android:id="@+id/btnGuardar4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guardar"/>
                </LinearLayout>

                <LinearLayout android:id="@+id/tab5"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView android:id="@+id/textView5"
                        android:text="@string/resumen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>